# webarena-infinity

./: .gitignore  CLAUDE.md  LOG.md  PROGRESS.md  pyproject.toml  run_eval.sh  setup.sh  test_verifier.py
apps/clio-matters/: APP_DESCRIPTION.md  index.html  real-tasks.json  sanity_check_real.py  server.py  tasks.json
apps/elation-clinical-records/: real-tasks.json  sanity_check_real.py
apps/elation-patient-communication/: real-tasks.json  sanity_check_real.py
apps/elation-prescriptions/: function-tasks.json  real-tasks.json  sanity_check_function.py  sanity_check_real.py
apps/elation-prescriptions-nodocs/: function-tasks.json  index.html  real-tasks.json  sanity_check_function.py  sanity_check_real.py  server.py
apps/figma-slides-nodocs/: real-tasks.json  sanity_check_function.py  sanity_check_real.py
apps/figma-text-and-typography/: APP_DESCRIPTION.md  function-tasks.json  index.html  real-tasks.json  (+3 more)
docs/: download-manual.md  environment-protocol.md  evaluation-harness.md  function-task-audit.md  function-task-design-guide.md  real-task-design-guide.md  task-design-guide.md  task-hardening-guide.md  verifier-sanity-check.md  web-app-data-guide.md  web-app-design-guide.md
evaluation/: agents.py  report.py  run_eval.py  run_eval_parallel.py  server.py  tasks.py  test_mode.py  test_panel.js  vision_agents.py
infra/: collect_results.py  config.py  env_manifest.jsonl  env_worker.py  pipeline.py  run_all_apps.sh  upload_results.py
reports/: gemini_eval_summary.md
scripts/: convert_ec2_pdf.py  download_manuals.py  scan_linebreaks.py  unwrap_paragraphs.py
(+15198 files in other folders)
