[project]
name = "mirror-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.9",
    "Pillow>=10.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dashboard = ["rich>=13.0"]
vision = ["google-genai", "openai"]
